# abb-ros

./: .gitignore  README.md
ABBInterpreter/: makefile
ABBInterpreter/EGM/: EGM.mod  egm-sensor-linux.cpp
ABBInterpreter/EGM/ikfast/: ikfast_interface.cpp
ABBInterpreter/RapidServer/mCube2_BACKUP_2015-02-13/: system.xml
ABBInterpreter/include/: ABBInterpreter.h
ABBInterpreter/src/: ABBInterpreter.cpp
code/examples/basicDemo/: CMakeLists.txt  mainpage.dox
code/launch/: ABBsystem.launch  calibration.launch  container.launch  display.launch  droop.launch  env.sh  fullSystem.launch  manifest.xml  mcubeAPCSystem.launch  mcubeSystem.launch  run_display_script  run_vision_script  system.launch  tableVision.launch  tableVisionRemote.launch  testSystem.launch  vision.launch
code/libraries/matVec/: CMakeLists.txt
code/libraries/pqp/: CMakeLists.txt  mainpage.dox  manifest.xml
code/libraries/pqp/src/pqp/: PQP.ncb  PQP.sln  PQP.vcproj
code/libraries/pqp/src/pqp/src/: PQP_Compile.h
code/libraries/serialPort/: CMakeLists.txt  mainpage.dox  manifest.xml
code/mains/annie/: CMakeLists.txt  mainpage.dox  manifest.xml
code/mains/data_collection/: CMakeLists.txt  manifest.xml
code/mains/data_place/: CMakeLists.txt  manifest.xml
code/mains/demo/: CMakeLists.txt  manifest.xml
code/mains/droop/: CMakeLists.txt  Pend_Model.mdl  Pend_Model_Simscape.mdl  Pend_Openloop.slx  Pend_Simscape_Openloop.mdl  basic.m  evaluate.m  f.m  ff.m  findGradient.m  findGradient2.m  findGradientPend.m  getWayPts.m  hand.mdl  hand_nofeedback.slx  hand_test.mdl  helloworld.slx  interpolate.m  inverted_pendulum.slx  lineSearch.m  mainpage.dox  manifest.xml  model.m  openloop_hand.slx  optimize.m  planar_gradient.m  run.m  rungd.m  searchParams.m  sim_for_matlab.slx  simple.mdl  simple2.mdl  t_d_longlong.mat  t_d_longshort.mat  t_d_longshort2.mat  t_pp_longlong.mat  t_pp_longshort.mat  test.slx  theta.mat  theta_ddot.mat  (+3 more)
code/mains/droop/include/droop/: Polygon.h  Polyhedron.h  geometry_tools.h
code/mains/droop/src/: droop_client.cpp  droop_server.cpp  geometry_tools.cpp  polygon.cpp  polyhedron.cpp  test.cpp  unit_tests.cpp
code/mains/droop/srv/: Pick.srv  Push.srv
code/mains/droop/writeups/: icra15.tex  more.tex  notes.aux  notes.out  notes.tex  paper.tex  tmp.m
code/mains/drop_demo/: CMakeLists.txt  manifest.xml
code/mains/insert_demo/: CMakeLists.txt  manifest.xml
code/mains/nikhil/: CMakeLists.txt  mainpage.dox  manifest.xml
code/mains/nikhil/src/: BouncelessF2E.cpp  E2F.cpp  F2E2F.cpp  F2E2FReduced.cpp  FlipInAir.cpp  FlipInAirLoop.cpp  FlipInHand.cpp  FlipInHandLoop.cpp  GroundRoll.cpp  GroundRollLoop.cpp  PushTranslate.cpp  RollInHand.cpp  RollInHandLoop.cpp  RotateInFingers.cpp  RotateInFingersLoop.cpp  Sequence.cpp  VertCyl.cpp  VertCylLoop.cpp  topple.cpp  toppleLoop.cpp
code/mains/palm_calibration/: CMakeLists.txt
code/mains/planner/: CMakeLists.txt  manifest.xml
code/mains/pptest/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
code/mains/regraspComm/: CMakeLists.txt  mainpage.dox  manifest.xml
code/mains/regraspNode/: CMakeLists.txt  mainpage.dox  manifest.xml
code/mains/regrasp_demo/: CMakeLists.txt  mainpage.dox  manifest.xml
code/mains/regrasp_test/: CMakeLists.txt  mainpage.dox  manifest.xml
code/mains/task_reqs/: CMakeLists.txt  manifest.xml
code/mains/teleop/: CMakeLists.txt  manifest.xml
code/mains/test_demo/: CMakeLists.txt  manifest.xml
code/nodes/calibration/: CMakeLists.txt  calibrate-kinect-system  manifest.xml
code/nodes/grasp/: stack.xml
code/nodes/mocap/: README
code/nodes/place/: stack.xml
code/nodes/robot/ROS/robot_node/: CMakeLists.txt  mainpage.dox  manifest.xml
code/nodes/robot/ROS/robot_node/src/: robot_node.cpp  robot_node.h
code/nodes/robot/ROS/robot_node/src/PracticalSocket/: PracticalSocket.cpp
code/nodes/sense/: stack.xml
code/nodes/util_comm/: CMakeLists.txt  mainpage.dox  manifest.xml
code/nodes/util_comm/src/: util_comm.cpp  util_comm.h
code/nodes/vision/ROS/vision_calibration/: CMakeLists.txt  mainpage.dox  manifest.xml
code/nodes/vision/ROS/vision_calibration/matlab_scripts/: calibrate_vision.m  findTransform.m  find_points.m  get_height.m  get_transform.m  load_data.m  plot_results.m  quat2rot.m  rot2quat.m  toHomo.m  toTransQuat.m
code/nodes/vision/ROS/vision_calibration/src/: lower_kinect_cal.cpp  objRec_calibration.cpp  static_calibration.cpp  vision_calibration.cpp
code/parameters/: ABBparams.yaml  cameraParams.yaml  displayParams.yaml  displayParams_single.yaml  handParams.yaml  handParams_P2.yaml  handRecParams.yaml  loggerParams.yaml  matlabParams.yaml  mcubeAPCRobotParams.yaml  mcubeRobotParams.yaml  objRecParams.yaml  oldCameraParams.yaml  robotParams_virtual.yaml  systemParams.yaml  tableVisionParams.yaml  transform_params.yaml  vis_place_calibration.yaml
code/parameters/old_transform_params/: 2012-07-25_16.20.38_params.yaml  2012-07-25_16.32.44_params.yaml  2012-07-25_17.39.13_params.yaml  2012-07-25_17.47.54_params.yaml  2012-08-15_11.33.56_params.yaml  2012-08-15_11.39.47_params.yaml
code/tests/test_P2_transmission/: CMakeLists.txt  mainpage.dox  manifest.xml
examples/basicDemo/: CMakeLists.txt  manifest.xml
examples/basicDemo/src/: basicDemo.cpp
robot_comm/: CMakeLists.txt  mainpage.dox
robot_comm/src/: robot_comm.cpp  robot_comm.h
robot_node/: CMakeLists.txt
robot_node/parameters/: mcubeAPCRobotParams-virtual.yaml  mcubeRobotParams.yaml
robot_node/src/: robot_node.cpp  robot_node.h
utilities/filesInFolder/: filesInFolder.c
utilities/jerkAnalysis/motionTest/: makefile
utilities/mexCollide/: makefile
utilities/mexCollide/demo/: collisionCheckingDemo.m
utilities/mexCollide/pqp-1.3/: Makefile
utilities/mexCollide/src/: mexCollideDetect.cpp  mexCollideLoadModel.cpp  vrmlIO.cpp  vrmlIO.h
utilities/scanPorts/: makefile
utilities/scanPorts/include/: serialPort.h
utilities/scripts/: inputMarkerPose  inputMarkerPose.cpp  loadSignatures.m  makefile  plotGeneration  plotGeneration.cpp  resampling  resampling.cpp
(+1216 files in other folders)
